# ExecutorApp

./: .env  .gitignore  CMakeLists.txt  Dockerfile  README.md  build-docker-image.sh  docker-compose.yml  main.c  run_docker.sh
.github/workflows/: c-cpp.yml  integration_tests.yml  publish-docker-image.yml  unit_test_c.yml
consts/: boolean.h
error_utilites/: error_utilites.h
hash_table/: hash_table.c  hash_table.h  result_type.h  results.h  value.c  value.h
main_thread/: main_thread.c
socket_utilities/: socket_utilities.c  socket_utilities.h
socket_utilities/proto_definitions/: aggregate.pb-c.c  aggregate.pb-c.h  query_request.pb-c.h  result.pb-c.c
socket_utilities/query_request/: query_request.pb-c.c  query_request.pb-c.h
socket_utilities/request_protocol/: aggregation.h  operation.h  request.c  request.h  request_protocol.c  request_protocol.h
src/: CMakeLists.txt  main.c
src/client_array/: client_array.c  client_array.h
src/controllers_server/: controllers_server.c  controllers_server.h
src/converters/: hash_table_to_query_response_converter.c  hash_table_to_query_response_converter.h  hash_table_to_query_result_converter.c  hash_table_to_query_result_converter.h  ht_value_type_to_proto_value_type.c  ht_value_type_to_proto_value_type.h  internal_to_proto_aggregate_converters.c  internal_to_proto_aggregate_converters.h
src/error_handling/: error_handling.h
src/error_utilites/: error_utilites.h
src/executors_server/: executors_server.c  executors_server.h
src/hash_table/: farmhash-c.c  farmhash-c.h  hash_table.c  hash_table.h  hash_table_abstraction.h  hash_table_interface.c  hash_table_interface.h  hash_table_optimized.c  hash_table_optimized.h  hash_table_struct.h
src/logging/: logging.h
src/main_thread/: main_thread.c  main_thread.h
src/parquet_helpers/: parquet_helpers.c  parquet_helpers.h
src/proto_definitions/: aggregate.pb-c.c  aggregate.pb-c.h  error.pb-c.c  error.pb-c.h  query_request.pb-c.c  query_request.pb-c.h  query_response.pb-c.c  query_response.pb-c.h  query_result.pb-c.c  query_result.pb-c.h  result_type.pb-c.c  result_type.pb-c.h
src/socket_utilities/: socket_utilities.c  socket_utilities.h
src/socket_utilities/proto_definitions/: query_request.pb-c.c  result.pb-c.h
src/socket_utilities/request_protocol/: request_protocol.c  request_protocol.h
src/temporary_testing/: test.c  test.h
src/unit_tests/: CMakeLists.txt  tests_converters.cc  tests_hash_map.cc  tests_hash_map_optimized.cc  tests_worker.cc  tests_worker_group.cc
src/worker_group/: aggregate_function.h  thread_data.h  worker_group.c  worker_group.h
src/worker_group/workers/: worker.c  worker.h
